--- a/index.html
+++ b/index.html
@@ -102,8 +102,8 @@
                 <div class="grid two-equal-col">
                     <div class="pt_40">
                         <h1 class="text_lg regular">
-                            We <strong>Design, Develop</strong> and <br>
-                            <strong>Market</strong> state-of-the-art <br>
+                            We <strong>Design, Develop</strong> and
+                            <strong>Market</strong> state-of-the-art
                             digital solutions for you
                         </h1>
                         <p class="grey pt_40 medium">
