--- a/index.html
+++ b/index.html
@@ -198,7 +198,8 @@
                             <div class="splide__slide">
                                 <div>
                                     <div class="grid two-equal-col">
-                                        <div><img src="img/service-img-1.png" class="img-responsive"></div>
+                                        <div class="text-center"><img src="img/service-img-1.png"
+                                                class="img-responsive"></div>
                                         <div>
                                             <h3 class="text_xxxl">Mobile Application Development</h3>
                                             <p class="pt_40">
@@ -215,7 +216,8 @@
                             <div class="splide__slide">
                                 <div>
                                     <div class="grid two-equal-col">
-                                        <div><img src="img/service-img-1.png" class="img-responsive"></div>
+                                        <div class="text-center"><img src="img/service-img-1.png"
+                                                class="img-responsive"></div>
                                         <div>
                                             <h3 class="text_xxxl">Web Application Development</h3>
                                             <p class="pt_40">
@@ -232,7 +234,8 @@
                             <div class="splide__slide">
                                 <div>
                                     <div class="grid two-equal-col">
-                                        <div><img src="img/service-img-1.png" class="img-responsive"></div>
+                                        <div class="text-center"><img src="img/service-img-1.png"
+                                                class="img-responsive"></div>
                                         <div>
                                             <h3 class="text_xxxl">Website & CMS Development</h3>
                                             <p class="pt_40">
@@ -249,7 +252,8 @@
                             <div class="splide__slide">
                                 <div>
                                     <div class="grid two-equal-col">
-                                        <div><img src="img/service-img-1.png" class="img-responsive"></div>
+                                        <div class="text-center"><img src="img/service-img-1.png"
+                                                class="img-responsive"></div>
                                         <div>
                                             <h3 class="text_xxxl">Cloud Solutions</h3>
                                             <p class="pt_40">
@@ -266,7 +270,8 @@
                             <div class="splide__slide">
                                 <div>
                                     <div class="grid two-equal-col">
-                                        <div><img src="img/service-img-1.png" class="img-responsive"></div>
+                                        <div class="text-center"><img src="img/service-img-1.png"
+                                                class="img-responsive"></div>
                                         <div>
                                             <h3 class="text_xxxl">Digital Marketing</h3>
                                             <p class="pt_40">
@@ -283,7 +288,8 @@
                             <div class="splide__slide">
                                 <div>
                                     <div class="grid two-equal-col">
-                                        <div><img src="img/service-img-1.png" class="img-responsive"></div>
+                                        <div class="text-center"><img src="img/service-img-1.png"
+                                                class="img-responsive"></div>
                                         <div>
                                             <h3 class="text_xxxl">Data, BI, & Analytics Consulting Services</h3>
                                             <p class="pt_40">
@@ -300,7 +306,8 @@
                             <div class="splide__slide">
                                 <div>
                                     <div class="grid two-equal-col">
-                                        <div><img src="img/service-img-1.png" class="img-responsive"></div>
+                                        <div class="text-center"><img src="img/service-img-1.png"
+                                                class="img-responsive"></div>
                                         <div>
                                             <h3 class="text_xxxl">DevOps Services and Solutionss</h3>
                                             <p class="pt_40">
@@ -317,7 +324,8 @@
                             <div class="splide__slide">
                                 <div>
                                     <div class="grid two-equal-col">
-                                        <div><img src="img/service-img-1.png" class="img-responsive"></div>
+                                        <div class="text-center"><img src="img/service-img-1.png"
+                                                class="img-responsive"></div>
                                         <div>
                                             <h3 class="text_xxxl">Quality & Perfor-mance Engineering</h3>
                                             <p class="pt_40">
@@ -334,7 +342,8 @@
                             <div class="splide__slide">
                                 <div>
                                     <div class="grid two-equal-col">
-                                        <div><img src="img/service-img-1.png" class="img-responsive"></div>
+                                        <div class="text-center"><img src="img/service-img-1.png"
+                                                class="img-responsive"></div>
                                         <div>
                                             <h3 class="text_xxxl">Blockchain</h3>
                                             <p class="pt_40">
@@ -351,7 +360,8 @@
                             <div class="splide__slide">
                                 <div>
                                     <div class="grid two-equal-col">
-                                        <div><img src="img/service-img-1.png" class="img-responsive"></div>
+                                        <div class="text-center"><img src="img/service-img-1.png"
+                                                class="img-responsive"></div>
                                         <div>
                                             <h3 class="text_xxxl">No Code solutions</h3>
                                             <p class="pt_40">
@@ -750,7 +760,7 @@
                 </h2>
                 <a href="javascript:void(0)" class="btn-1">Contact Us</a>
                 <div class="flex pt_60" id="case-studies">
-                    <div class="card-item">
+                    <div class="card-item" data-scroll>
                         <img src="img/card-01.jpg" alt="card-01">
                         <h3 class="text_med pb_16">Lorem ipsum dolor sit amet, </h3>
                         <p class="pb_30">
@@ -760,7 +770,7 @@
                         <a href="javascript:void(0)" class="btn-2">View</a>
                     </div>
 
-                    <div class="card-item">
+                    <div class="card-item" data-scroll>
                         <img src="img/card-02.jpg" alt="card-01">
                         <h3 class="text_med pb_16">Lorem ipsum dolor sit amet, </h3>
                         <p class="pb_30">
@@ -770,7 +780,7 @@
                         <a href="javascript:void(0)" class="btn-2">View</a>
                     </div>
 
-                    <div class="card-item">
+                    <div class="card-item" data-scroll>
                         <img src="img/card-03.jpg" alt="card-01">
                         <h3 class="text_med pb_16">Lorem ipsum dolor sit amet, </h3>
                         <p class="pb_30">
@@ -780,7 +790,7 @@
                         <a href="javascript:void(0)" class="btn-2">View</a>
                     </div>
 
-                    <div class="card-item">
+                    <div class="card-item" data-scroll>
                         <img src="img/card-04.jpg" alt="card-01">
                         <h3 class="text_med pb_16">Lorem ipsum dolor sit amet, </h3>
                         <p class="pb_30">
@@ -792,7 +802,7 @@
 
                     <!-- view more -->
 
-                    <div class="card-item">
+                    <!-- <div class="card-item" data-scroll>
                         <img src="img/card-04.jpg" alt="card-01">
                         <h3 class="text_med pb_16">Lorem ipsum dolor sit amet, </h3>
                         <p class="pb_30">
@@ -802,7 +812,7 @@
                         <a href="javascript:void(0)" class="btn-2">View</a>
                     </div>
 
-                    <div class="card-item">
+                    <div class="card-item" data-scroll>
                         <img src="img/card-04.jpg" alt="card-01">
                         <h3 class="text_med pb_16">Lorem ipsum dolor sit amet, </h3>
                         <p class="pb_30">
@@ -810,12 +820,12 @@
                             quam pulvinar molestie.
                         </p>
                         <a href="javascript:void(0)" class="btn-2">View</a>
-                    </div>
+                    </div> -->
 
                 </div>
-                <div class="text-center pb_40">
+                <!-- <div class="text-center pb_40">
                     <a href="javascript:void(0)" class="btn-1" id="more-service">View More</a>
-                </div>
+                </div> -->
             </div>
         </section>
 
@@ -1132,6 +1142,13 @@
     <script src="js/slick.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/@splidejs/splide@2.4.6/dist/js/splide.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/Swiper/3.3.1/js/swiper.min.js"></script>
+    <script src="https://unpkg.com/scroll-out/dist/scroll-out.min.js"></script>
+    <script>
+        ScrollOut({
+            threshold: 0.1,
+            once: true,
+        });
+    </script>
     <script>
         $('.testimonialSlider').slick({
             variableWidth: true,
