--- a/index.html
+++ b/index.html
@@ -762,7 +762,7 @@
                 <a href="javascript:void(0)" class="btn-1" onclick="focusForm2()">Contact Us</a>
                 <div class="flex pt_60" id="case-studies">
                     <div class="card-item" data-scroll>
-                        <img src="img/card-01.jpg" alt="card-01">
+                        <img src="img/s-01.jpg" alt="card-01">
                         <h3 class="text_med pb_16">Lorem ipsum dolor sit amet, </h3>
                         <p class="pb_30">
                             Lorem ipsum dolor sit amet, consectetur adipiscing elit. Interdum massa congue ultricies
@@ -772,7 +772,7 @@
                     </div>
 
                     <div class="card-item" data-scroll>
-                        <img src="img/card-02.jpg" alt="card-01">
+                        <img src="img/s-02.jpg" alt="card-01">
                         <h3 class="text_med pb_16">Lorem ipsum dolor sit amet, </h3>
                         <p class="pb_30">
                             Lorem ipsum dolor sit amet, consectetur adipiscing elit. Interdum massa congue ultricies
@@ -782,7 +782,7 @@
                     </div>
 
                     <div class="card-item" data-scroll>
-                        <img src="img/card-03.jpg" alt="card-01">
+                        <img src="img/s-03.jpg" alt="card-01">
                         <h3 class="text_med pb_16">Lorem ipsum dolor sit amet, </h3>
                         <p class="pb_30">
                             Lorem ipsum dolor sit amet, consectetur adipiscing elit. Interdum massa congue ultricies
@@ -792,7 +792,7 @@
                     </div>
 
                     <div class="card-item" data-scroll>
-                        <img src="img/card-04.jpg" alt="card-01">
+                        <img src="img/s-04.jpg" alt="card-01">
                         <h3 class="text_med pb_16">Lorem ipsum dolor sit amet, </h3>
                         <p class="pb_30">
                             Lorem ipsum dolor sit amet, consectetur adipiscing elit. Interdum massa congue ultricies
