--- a/index.html
+++ b/index.html
@@ -1238,8 +1238,9 @@
                 arrows: false,
                 // focus: 'center',
                 pagination: false,
-                cover: true,
+                // cover: true,
                 drag: 'free',
+                focus: 'center',
             }).mount();
 
             const servicesSliderOne = new Splide('.servicesSliderOne', {
