--- a/index.html
+++ b/index.html
@@ -1281,7 +1281,7 @@
             }).mount();
 
             const servicesSliderOne = new Splide('.servicesSliderOne', {
-                type: 'fade',
+                type: 'slide',
                 pagination: false,
                 arrows: false,
                 cover: true,
